--- a/api-gateway/prd/k8s-backend-gateway-lb.yml
+++ b/api-gateway/prd/k8s-backend-gateway-lb.yml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: k8s-backend-gateway-lb
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # Network Load Balancer 사용
+    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"  # 외부 접근 허용
 spec:
   type: LoadBalancer
   selector:
