--- a/api-gateway/prd/k8s-backend-gateway-lb.yml
+++ b/api-gateway/prd/k8s-backend-gateway-lb.yml
@@ -11,7 +11,8 @@ spec:
   selector:
     app: k8s-backend-gateway
   ports:
-    - protocol: TCP
-      port: 8080
+    - name: http
+      protocol: TCP
+      port: 80
       targetPort: 8080
       # nodePort: 30080
